packages/verifier/test/examples/failing/bad-default-export.js
// expect: tool-shape
export const helper = () => {};

export default function (element) {
  return () => {};
}
